Made star icons work, fixed spinbox when therse no data and spinbox jumping to page

--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@
 body            { font-family: sans-serif; background: #1a1a1a; color: #fff}
 a, h1, h2       { color: #fff; underline: none }
 a               { text-decoration: none; }
-h1, h2          { font-family: 'Georgia', serif; margin: 0; }
+h1, h2          { font-family: 'Open Sans',sans-serif; margin: 0; }
 h1              { border-bottom: 2px solid #eee; }
 h2              { font-size: 1.2em; }
 h3              { color: #22a7f0; }
@@ -108,7 +108,6 @@ bottom: 0; }
 
 }
 .fa {
-
     display: inline-block;
     font: normal normal normal 14px/1 FontAwesome;
         font-size: 14px;
@@ -116,7 +115,6 @@ bottom: 0; }
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-
 }
 .book-grid-item-container .book-grid-item .title {
     width: 100%;
